--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -159,5 +159,13 @@
         color: rgba(0, 0, 0, 0.634);
       }
     }
+    .transaction-box {
+      width: 100%;
+      padding: 1rem;
+      overflow-x: auto;
+      > h2 {
+        margin: 1.5rem 0 0 0;
+      }
+    }
   }
 }
