feat: add product page with table integration

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,6 @@
-@import "mixin";
-// @import "dashboard";
-// @import "products";
+@import "_mixin";
+@import "dashboard";
+@import "product";
 // @import "chart";
 // @import "dashboardapp";
 // @import "mediaquery";
@@ -32,7 +32,7 @@ a {
   color: rgb(0, 195, 0);
 }
 
-.admin-Wrapper {
+.admin-wrapper {
   @include grid(1fr 4fr, 2rem);
   height: 100vh;
   background-color: rgb(247, 247, 247);
