feat: add table pagination

--- a/src/styles/_product.scss
+++ b/src/styles/_product.scss
@@ -20,3 +20,21 @@
     opacity: 0.8;
   }
 }
+
+.table-pagination {
+  @include flex;
+  padding: 2rem;
+  > button {
+    padding: 0.5rem 1rem;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    cursor: pointer;
+    background-color: rgb(106, 0, 255);
+    color: white;
+    &:disabled {
+      background-color: rgba(0, 115, 255, 0.1);
+      cursor: not-allowed;
+    }
+  }
+}
