--- a/src/styles/_product.scss
+++ b/src/styles/_product.scss
@@ -1,5 +1,3 @@
-@import "_mixin";
-
 .dashboard-product-box {
   background-color: white;
   padding: 2rem;
@@ -35,6 +33,63 @@
     &:disabled {
       background-color: rgba(0, 115, 255, 0.1);
       cursor: not-allowed;
+    }
+  }
+}
+
+.product-management {
+  @include flex(row, center, unset);
+  padding: 4rem;
+
+  > article {
+    height: 85vh;
+    padding: 2rem;
+    width: 100%;
+    max-width: 400px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.216);
+
+    > form {
+      @include flex(column, unset, center, 2rem);
+      > h2 {
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      }
+      > img {
+        @include square(5rem);
+        object-fit: cover;
+        border-radius: 5px;
+      }
+
+      > div {
+        width: 100%;
+        position: relative;
+        > label {
+          position: absolute;
+          left: 0;
+          top: -1.5rem;
+        }
+        > input {
+          padding: 1rem;
+          margin-bottom: 0.5rem;
+          border-radius: 8px;
+          @include inputStyle(100%, 1rem, unset, 1px solid rgb(221, 221, 221));
+        }
+      }
+      > button {
+        @include square(100%);
+        border-radius: 10px;
+        border: none;
+        font-size: 1.2rem;
+        height: 3.5rem;
+        cursor: pointer;
+        color: white;
+        background-color: rgba(64, 0, 255, 0.492);
+        &:hover {
+          opacity: 0.8;
+        }
+      }
     }
   }
 }
