--- a/src/styles/_product.scss
+++ b/src/styles/_product.scss
@@ -41,6 +41,50 @@
   @include flex(row, center, unset);
   padding: 4rem;
 
+  > section {
+    @include flex(column, unset, unset, 1rem);
+    border-radius: 8px;
+    position: relative;
+    overflow-y: auto;
+    background-color: white;
+    width: 100%;
+    height: 85vh;
+    max-width: 500px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.216);
+    background-color: white;
+    padding: 2rem;
+
+    > h2 {
+      @include heading(2px);
+      text-align: center;
+    }
+
+    > img {
+      @include square(100%);
+      object-fit: cover;
+    }
+
+    > strong {
+      font-weight: 300;
+    }
+
+    > span {
+      position: absolute;
+      right: 2rem;
+      top: 2rem;
+    }
+
+    > p {
+      text-align: center;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+    > h3 {
+      text-align: center;
+      font-size: 2rem;
+    }
+  }
+
   > article {
     height: 85vh;
     padding: 2rem;
