--- a/src/styles/_product.scss
+++ b/src/styles/_product.scss
@@ -137,3 +137,44 @@
     }
   }
 }
+
+.transaction-card {
+  @include flex(row, unset, center, 1rem);
+  > img {
+    @include square(4rem);
+    object-fit: cover;
+    border-radius: 8px;
+  }
+  > span {
+    margin-left: auto;
+  }
+}
+
+.shipping-info-card {
+  > h1 {
+    text-align: center;
+    @include heading(2px);
+  }
+  > h5 {
+    margin: 2rem 0 0 0.5rem;
+    font-size: 1.1rem;
+    font-weight: 700;
+  }
+  > p {
+    margin: 0.5rem;
+  }
+  > button {
+    margin: 2rem 0;
+    @include square(100%);
+    border-radius: 8px;
+    border: none;
+    font-size: 1.2rem;
+    height: 3rem;
+    cursor: pointer;
+    color: white;
+    background-color: rgba(64, 0, 255, 0.492);
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+}
