--- a/src/styles/_chart.scss
+++ b/src/styles/_chart.scss
@@ -8,6 +8,13 @@
   > section {
     width: 80%;
     margin: 4rem auto;
+    > div {
+      max-width: 25rem;
+      margin: auto;
+      margin-top: 6rem;
+      margin-bottom: -1rem;
+    }
+
     > h2 {
       margin: 2rem 0;
       text-align: center;
