feat: Add Line chart page & Line charts

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,7 @@
 @import "_mixin";
 @import "dashboard";
 @import "product";
-// @import "chart";
+@import "chart";
 // @import "dashboardapp";
 // @import "mediaquery";
 
