feat: implement coin toss

--- a/src/styles/_dashboardapp.scss
+++ b/src/styles/_dashboardapp.scss
@@ -29,5 +29,32 @@
         }
       }
     }
+
+    .toss {
+      margin: 2rem;
+      @include square(15rem);
+      position: relative;
+      cursor: pointer;
+
+      transform-style: preserve-3d;
+      transition: all 0.5s;
+      > div {
+        border-radius: 50%;
+        @include square(100%);
+        position: absolute;
+        display: grid;
+        place-items: center;
+        background-size: cover;
+        backface-visibility: hidden;
+        filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.521));
+        &:first-of-type {
+          background-image: url("../assets/coin-front.png");
+        }
+        &:last-of-type {
+          background-image: url("../assets/coin-back.png");
+          transform: rotateY(-180deg);
+        }
+      }
+    }
   }
 }
