feat: implement coupon generator

--- a/src/styles/_dashboardapp.scss
+++ b/src/styles/_dashboardapp.scss
@@ -56,5 +56,69 @@
         }
       }
     }
+
+    .coupon-form {
+      @include grid(2fr 1fr, 2rem);
+      max-width: 30rem;
+      > input {
+        padding: 1rem;
+        border: 1px solid rgba(0, 0, 0, 0.521);
+        outline: none;
+        border-radius: 5px;
+      }
+
+      > fieldset {
+        padding: 1rem;
+        border: 1px solid rgba(0, 0, 0, 0.521);
+        border-radius: 5px;
+        @include flex(row, center, 0);
+        flex-wrap: wrap;
+        grid-column: 1/3;
+
+        span {
+          font-weight: 0.8rem;
+          font-weight: 300;
+          margin-inline-start: 0.25rem;
+          margin-inline-end: 1rem;
+        }
+      }
+
+      > button {
+        font-weight: 700;
+        font-size: 1.1rem;
+        width: 100%;
+        padding: 1rem;
+        border: none;
+        color: white;
+        cursor: pointer;
+        margin: 2rem 0;
+        border-radius: 10px;
+        background-color: rgba(80, 19, 232, 0.81);
+        grid-column: 1/3;
+      }
+    }
+
+    > code {
+      position: relative;
+      font-size: 1.2rem;
+      letter-spacing: 2px;
+      cursor: pointer;
+      &:hover > span {
+        opacity: 1;
+      }
+
+      > span {
+        opacity: 0;
+        @include square(100%);
+        border-radius: 5px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.823);
+        color: rgb(255, 255, 255);
+        font-size: 0.8rem;
+        @include flex;
+      }
+    }
   }
 }
