style: improve layout responsiveness

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,8 +2,8 @@
 @import "dashboard";
 @import "product";
 @import "chart";
-// @import "dashboardapp";
-// @import "mediaquery";
+@import "dashboardapp";
+@import "mediaquery";
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -199,5 +199,36 @@ a {
 @keyframes loading-animation {
   to {
     transform: rotateZ(360deg);
+  }
+}
+
+#hamburger {
+  display: grid;
+  place-items: center;
+  @include square(3rem);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: rgb(81, 0, 255);
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
+  font-size: 2rem;
+  background-color: white;
+  border-radius: 50%;
+  z-index: 9;
+}
+
+#close-sidebar {
+  @include flex;
+  width: 3rem;
+  height: 2rem;
+  color: rgb(255, 255, 255);
+  font-size: 0.7rem;
+  font-weight: 600;
+  background-color: #ff0000;
+
+  &:hover {
+    background-color: #f37e7e;
   }
 }
