--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -232,3 +232,25 @@ a {
     background-color: #f37e7e;
   }
 }
+
+.loading {
+  @include flex;
+  width: 100%;
+  height: 100vh;
+
+  > div {
+    @include square(6rem);
+    border-right: 1rem solid rgb(255, 255, 255);
+    border-bottom: 1rem solid rgb(255, 255, 255);
+    border-top: 1rem solid rgb(87, 26, 255);
+    border-left: 1rem solid rgb(0, 9, 110);
+    border-radius: 50%;
+    animation: loading-animation 0.5s linear infinite;
+  }
+}
+
+@keyframes loading-animation {
+  to {
+    transform: rotateZ(360deg);
+  }
+}
